<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btnHarvest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/harvest_log" />

        <Button
            android:id="@+id/btnGrading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grading_tool"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_monitor"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnBatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/batch_tracker"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnProfit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profit_calculator"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</ScrollView>